# tauri-mcp-client-coder

./: TODO1.md  TODO2.md  console.txt  index.html  package.json  pnpm-lock.yaml  repomix-output.xml  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  config.rs  error.rs  main.rs  models.rs  scaffolder.rs
src-tauri/src/agents/: coder,rs  mod.rs  planner.rs
src-tauri/src/baml_client/: mod.rs
src-tauri/src/mcp_server/: handler.rs  mcp_client_runtime.rs  mod.rs  runner.rs  tools.rs
src-tauri/src/services/: human_interface.rs  knowledge_manager.rs  mod.rs  probe_commands.rs  probe_service.rs  workspace.rs
src/components/: Dashboard.tsx  GlobalSearch.tsx  HumanInputDialog.tsx  KnowledgeBaseView.tsx  Nav.tsx  ProbeDemo.tsx  SettingsView.tsx  SpecsView.tsx  SystemTerminalView.tsx  TaskDetailView.tsx  TaskProgressView.tsx
src/hooks/: useTauriState.ts
src/types/: index.ts
src/utils/: probeApi.ts  tauriApi.ts
src/views/: ArchitectureView.tsx  DashboardView.tsx  GoalsView.tsx  KnowledgeBaseView.tsx  LearningCenterView.tsx  SettingsView.tsx  SystemTerminalView.tsx  TaskDetailView.tsx  TaskProgressView.tsx  WhiteboardView.tsx
