[package]
name = "tauri-mcp-client-coder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_mcp_client_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard = "2"

tokio = { version = "1.35", features = ["full"] } # For async operations, ensure version
thiserror = "1.0"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # For structured logging
baml-client = { path = "./baml_client" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tantivy = "0.22" # Check for latest version
syn = { version = "2.0", features = ["full", "parsing", "visit"] } # For parsing Rust code
walkdir = "2" # For recursively finding files to index

[features]
default = ["dev-server"] # Enable dev server by default for tauri dev
dev-server = ["tauri/dev-server"]
# custom-protocol = ["tauri/custom-protocol"] # If needed later
